fix body overflow

--- a/src/app.css
+++ b/src/app.css
@@ -33,8 +33,8 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-  max-width: 100%;
-  max-height: 100%;
+  max-width: 100vw;
+  max-height: 100vh;
   overflow: hidden;
 }
 
